<?xml version="1.0"?>
<package>
  <name>seyyah</name>
  <version>0.0.0</version>
  <description>A mobile robot platform package</description>

  <maintainer email="behcet.senturk.1905@gmail.com">Behçet Şentürk</maintainer>
  <maintainer email="aarmagan.keskin@gmail.com">Armağan Keskin</maintainer>
  <maintainer email="ibrahimsn98@gmail.com">İbrahim Süren</maintainer>
  <maintainer email="saidyeter@gmail.com">Said Yeter</maintainer>
  <maintainer email="rootofarch@gmail.com">Hüseyin Erdem</maintainer>
  
  <license>GNUv3</license>

  <url type="website">http://yazgitlabs.com/calismalar/seyyah-ve-gozcu.html</url>
  
  <author email="behcet.senturk.1905@gmail.com">Behçet Şentürk</author>
  <author email="aarmagan.keskin@gmail.com">Armağan Keskin</author>
  <author email="ibrahimsn98@gmail.com">İbrahim Süren</author>
  <author email="saidyeter@gmail.com">Said Yeter</author>
  <author email="rootofarch@gmail.com">Hüseyin Erdem</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
